* Add invoice usage to party's contact mechanisms
* Show reconciled date on invoice
* Make description on invoice line optional

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Use tax sequence as default value for invoice taxes sequence
* Add party tax identifier on invoice

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Use Match pattern for invoice sequences

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add tax identifier on invoice
* Rename Invoice.create_move to get_move
* Rename InvoiceLine and InvoiceTax get_move_line to get_move_lines
* Change Invoice.set_number into classmethod
* Return original amount sign on fixed payment terms
* Add configuration option to store invoice report cache in filestore
* Manage readonly state on Invoice Line and Tax Line
* Rename account.invoice.payment_term.line.relativedelta
  into account.invoice.payment_term.line.delta
* Make payment term not required

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Merge invoice and credit note
* Inversed sign of tax report from credit note
* Move tax Rounding configuration to account
* Add Python3 support
* Change payment term percentage into ratio

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Don't set default unit price on invoice line
* Allow to modify some fields of posted invoice line

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* Allow to define many relativedelta on payment term
* Add test wizard for payment term
* Use TaxableMixin

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* Add Tax rounding configuration

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)
* Use account of write-off journal as default

Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)
* Use account move as cache

Version 2.8.0 - 2013-04-22